<resources>
    <string name="app_name">İşyerlerini Bul ve Göster</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Giriş</string>
    <string name="title_activity_register">Kayıt</string>
    <string name="title_activity_selection">Seçim</string>
    <string name="title_activity_register_isveren">Register_isveren</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_main_for_company">MainForCompany</string>
    <string name="title_activity_main_map">MainMap</string>
    <string name="tap_instructions">tv</string>
    <string name="title_activity_is__arama">Map</string>
    <string name="title_activity_randevu__islemleri">Randevu_Islemleri</string>
    <string name="date_button_set">Tarih Seç</string>
    <string name="btn_set_time">Saat</string>
    <string name="btn_send_msj">Gonder</string>
    <string name="btn_iptal_msj">Iptal</string>
    <string name="btn_anamenu">Ana Menu</string>
    <string name="spinner_okuladi">Üniversite</string>
    <string name="spinner_bolum">Bolüm</string>
    <string name="spinner_yil">Mezuniyet Yılı</string>
    <string name="spinner_ilce">İlceler</string>
    <string name="spinner_il">İller</string>
</resources>
