<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Randevu"
        android:autoText="false"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_firma_adi"
        android:layout_gravity="center"
        android:padding="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_alan"
        android:layout_gravity="center"
        android:padding="10dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <Button
            android:onClick="setDate"
            android:id="@+id/btn_set_date"
            android:background="#318CE7"
            android:text="@string/date_button_set"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <Button
            android:onClick="setTime"
            android:id="@+id/btn_set_time"
            android:layout_marginBottom="10dp"
            android:background="#318CE7"
            android:text="@string/btn_set_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/radio_group_list_selector"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="#80000000">

            <Button
                android:onClick="iptal"
                android:id="@+id/btn_iptal_message"
                android:text="@string/btn_iptal_msj"
                android:layout_width="166dp"
                android:background="#318CE7"
                android:layout_height="match_parent"
                android:layout_gravity="left" />

            <View
                android:id="@+id/VerticalLine1"
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:background="#aaa" />

            <Button
                android:onClick="sendMessage"
                android:id="@+id/btn_send_message"
                android:text="@string/btn_send_msj"
                android:background="#318CE7"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>